--- a/Web_Backend/first.html
+++ b/Web_Backend/first.html
@@ -3,12 +3,12 @@
 <html>
 <form action="action_page.php">
   <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    <img src="med.jpg" alt="Avatar" class="avatar">
   </div>
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+  <h1>  <input type="text" placeholder="Enter Username" name="uname" required></h1>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
