--- a/Web_Backend/first.html
+++ b/Web_Backend/first.html
@@ -3,7 +3,7 @@
 <html>
 <form action="action_page.php">
   <div class="imgcontainer">
-    <img src="med.jpg" alt="Avatar" class="avatar">
+    <img src="med.jpg" alt="Avatar" class="avatar" style="width:50px;height:60px;">
   </div>
 
   <div class="container">
