--- a/Web_Backend/first.html
+++ b/Web_Backend/first.html
@@ -8,7 +8,7 @@
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
-  <h1>  <input type="text" placeholder="Enter Username" name="uname" required>
+  <h1>  <input type="text" placeholder="Enter Username" label="uname" id="uname" required>
 
   </h1>
 
