--- a/Web_Backend/login_forms/third.html
+++ b/Web_Backend/login_forms/third.html
@@ -14,12 +14,12 @@
     <img src="med.jpg" alt="Avatar" class="avatar" style="width:100px;height:120px;">
   </div>
 <label>Number Of Vacant Rooms</label>
-<input type="text" name="vac" id="vac"/>
+<input type="number" name="vac" id="vac"/>
 <label>Number Of Patients</label>
-<input type="pat" name="pat" id="pat"/>
+<input type="number" name="pat" id="pat"/>
 <label>Number Of Doctors</label>
-<input type="doct" name="doct" id="doct"/>
-<input type="button" value="Submit" id="submit" onclick="validate()"/>
+<input type="number" name="doct" id="doct"/>
+<input type="submit" value="Submit" id="submit" onclick="validate()"/>
 
 
 </form>
